themes/startwords/assets/scss/article/_single.scss
/* single article page styles */

body.article {
    
    
    article {
        margin-top: rem(60px);
        margin-bottom: rem(100px);
        
        @media (min-width: $breakpoint-s) {
            margin-bottom: 0;
        }
        
        // header (summary)
        header {
            margin-bottom: rem(30px);
            @media (min-width: $breakpoint-s) { margin-bottom: rem(80px); }
            @media (min-width: $breakpoint-m) { margin-bottom: rem(60px); }
            
            p { margin: 0; }
            
            .number {
                a, a:visited {
                    color: $dark-grey;
                    text-decoration: none;
                }
            }
            
            .theme {
                font-size: rem(18px);
                font-weight: 900;
            }
            
            .doi { display: inline; clear: both; }
            
            // sequential author display with commas
            .authors {
                font-weight: 400;
                li, address { display: inline; }
                address::after { content: ', '; }
                li:last-child address::after { content: ''; }
            }
            
            .formats { font-weight: 400; margin-top: .5rem; }
            
            .formats a { margin-right: rem(5px); }
        }
        
        // body text
        p {
            overflow: hidden;
            margin: rem(17px) 0;
            font-weight: 300;
            line-height: rem(27px);
            @media (min-width: $breakpoint-m) { line-height: rem(30px); }
        }
        
        // lists
        ol, ul {
            font-weight: 300;
        }
        
        // block quotes
        blockquote {
            margin: rem(30px) 0;
            
            p {
                margin: 0;
                font-style: italic;
                font-weight: 400;
            }
            
            cite {
                display: block;
                margin-top: rem(5px);
                font-style: normal;
                font-weight: 300;
                
                &::before {
                    content: ' – '
                }
            }
        }
        
        // links
        a {
            @include highlight-focus;
            &.footnote-ref { outline-offset: rem(-10px); }
        }
        
        // flourished section break
        hr {
            background-image: url("/img/logos/startwords.svg");
            margin: rem(22px) 0;
            height: rem(22px);
            border: 0;
            background-repeat: no-repeat;
            background-size: contain;
            background-position: center;
        }
        
        // pull quotes
        blockquote.pull {
            margin: 0;
            padding: rem(25px) rem(65px);
            display: inline-block;
            box-sizing: border-box;
            width: 100%;
            position: relative;
            font-size: rem(22px);
            font-family: $font-sans;
            font-weight: 400;
            font-style: italic;
            color: $purple;
            
            @media (min-width: $breakpoint-s) { width: 50%; }
            @media (min-width: $breakpoint-m) { font-size: rem(24px); }
            
            &.left {
                float: left;
                margin-right: rem(10px);
            }
            
            &.right {
                float: right;
                margin-left: rem(10px);
            }
            
            &::before, &::after {
                position: absolute;
            }
            
            &::before {
                top: rem(10px);
                left: rem(10px);
                content: url('/img/pullquote-start.svg');
            }
            
            &::after {
                bottom: rem(10px);
                right: rem(10px);
                content: url('/img/pullquote-stop.svg');
            }
        }
    }
    
    // embedded content
    .sketchfab-embed-wrapper {
        margin: rem(30px) 0;
        
        iframe {
            width: 100%;
            height: $frame-height;
        }

        .preview {
            display: none;
            max-width: 100%;
        }
    }
    
    .deepzoom {
        width: 100%;
    }

    .deepzoom-preview {
        display: none;
        max-width: 100%;
    }
    
}

/* fallback content included to be shown in TXT version only */
.txt-only {
    display: none;
}
/* hide assets only used for pdf */
.print-only {
    display: none;
}


/* preliminary styles for dataweaving experiment */
article.fullscreen {
    .text-container {
        position: absolute;
        top: 0;
        left: 0;
        height: 100vh;
        width: 100vw;
    }
}

